# periodic-laplace

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
lib/: CMakeLists.txt
lib/assembly/: integrate.cpp  integrate.hpp  laplace_3d_periodic_adjoint_double_layer_boundary_operator.cpp  laplace_3d_periodic_adjoint_double_layer_boundary_operator.hpp  laplace_3d_periodic_double_layer_boundary_operator.cpp  laplace_3d_periodic_double_layer_boundary_operator.hpp  laplace_3d_periodic_double_layer_potential_operator.cpp  laplace_3d_periodic_double_layer_potential_operator.hpp  laplace_3d_periodic_potential_operator_base.hpp  laplace_3d_periodic_potential_operator_base_imp.hpp  laplace_3d_periodic_single_layer_boundary_operator.cpp  laplace_3d_periodic_single_layer_boundary_operator.hpp  laplace_3d_periodic_single_layer_potential_operator.cpp  laplace_3d_periodic_single_layer_potential_operator.hpp  laplace_3d_periodic_synthetic_boundary_operator_builder.cpp  laplace_3d_periodic_synthetic_boundary_operator_builder.hpp
lib/fiber/: laplace_3d_periodic_adjoint_double_layer_potential_kernel_functor.hpp  laplace_3d_periodic_double_layer_potential_kernel_functor.hpp  laplace_3d_periodic_hypersingular_off_diagonal_kernel_functor.hpp  laplace_3d_periodic_single_layer_potential_kernel_functor.hpp
python/: CMakeLists.txt  core_periodic_laplace.i  periodic_laplace.py
python/assembly/: integrate.i  laplace_3d_periodic_operators.i  laplace_3d_periodic_potential_operators.i
